# 5G_CN

./: README.md
5G_CN_Authenticator/: GtpCIes.py  MmeThread.py  NasHandler.py  NasPduBuilder.py  S1apCommon.py  S1apHandler.py  S1apPduBuilder.py  SctpHandler.py  Security.py  UeContext.py  connections.txt  controller.py
5G_CN_Authenticator/authentication/: Hss.py  HssUeContext.py  users_db.txt  users_db_backup.txt
5G_CN_Authenticator/modules/request-1.0.2/: PKG-INFO  setup.cfg
5G_CN_UPF/: gtpu_controller.py
